# toronto-service-calls-2023

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.yaml  cloud_build.sh  cloud_run_create.sh  cloud_run_execute.sh  cloudbuild.yaml  cloudbuild_test.yaml  compose.yml  klang_dbt.sh  make_dbt_docs.py  prefect.yaml  profiles.yml  pyproject.toml  requirements.txt  user.env
data/: city-wards-boundary-nldelim.geojson  city-wards-boundary.geojson  toronto_fsa.geojson  toronto_fsa_nldelim.geojson
dbt-core-service/: .gcloudignore  .gitignore  dbt_project.yml  docker_dbt.sh  make_dbt_docs.py  packages.yml  profiles.yml  pyproject.toml
dbt-core-service/models/core/: count_by_day.sql  schema.yml
dbt-core-service/models/staging/: schema.yml  stg_city_wards.sql
dockerfiles/: Dockerfile.dbt  Dockerfile.el_prefect  Dockerfile.extract_load  Dockerfile.sample  requirements.txt
docs/: Terraform.md  best_practice.md  cloudrun.md  dbt.md  docker.md  potholes.md  prefect.md  security.md  start-up.md  startup.md  viz.md
jobs/: extract_load.py  set_env.py  trigger_cloudrun.py
models/core/: requests_by_ward.sql
models/staging/: schema.yml  stg_service_calls.sql
notebooks/: cloudrun.ipynb  gcs_upload.ipynb  kwargs.ipynb  load_bq.ipynb  main.py  open-data.ipynb  prefect.ipynb  transform.ipynb
prefect-test/: deploy.sh  log-flow_deployment.yaml
prefect-test/flows/: dbt_flow.py  log_flow.py
seeds/: seeds_properties.yml  ward_id_lookup.csv
service_calls_311/: .prefectignore  build.sh  deploy.py  deploy.sh  deploy_el.sh  deploy_el_local.sh  deploy_fetch.sh  docker-entrypoint.sh  dockerfile  el.sh  extract_load.py  fetch.py  fetch.sh  load.py  local_run.sh  pip.Dockerfile  poetry.Dockerfile  pyproject.toml  requirements.txt  service-pipeline-deployment.yaml  weather.py  web-gcs-deployment.yaml
service_calls_311/flows/: cloudrun_elt.py  extract_load.py
service_calls_311/terraform/: load_geojson.tf  main.tf  variables.tf
terraform/: agent-startup.sh  main.tf  variables.tf
(+3 files in other folders)
