[tool.poetry]
name = "to-service"
version = "0.1.0"
description = "Data engineering project to visualize frequency of ser"
authors = ["vykuang <vykuang92@gmail.com>"]
readme = "README.md"
packages = [{include = "to_service"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
prefect = "^2.8"
prefect-gcp = "^0.3.0"
pyarrow = "^10.0.1"
python-dotenv = "^1.0.0"
gcsfs = "^2023.1.0"
folium = "^0.14.0"
google-cloud-bigquery = "^3.8.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.1.0"}
pytest = "^7.2.2"
jupyterlab = "^3.6.1"
ipykernel = "^6.21.3"
pre-commit = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
